correct dash spacing

--- a/theme/snapr/css/pages-dash.less
+++ b/theme/snapr/css/pages-dash.less
@@ -10,8 +10,11 @@
 
 .dash-wrapper{
     min-height: 316px;
-    top: -@padding * 2;
+
     position: relative;
+    ul{
+        margin: 0;
+    }
 }
 
 .dash-footer{
